<resources>
  <string name="app_name">Age Database</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="name">Name</string>
  <string name="age">Age</string>
  <string name="insert">Insert</string>
  <string name="delete">Delete</string>
  <string name="search">Search</string>
  <string name="textview">TextView</string>
  <string name="results">Results</string>
</resources>