<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home">
  <fragment
    android:id="@+id/nav_home"
    android:name="com.jasonstarling.agedatabase.ui.home.HomeFragment"
    android:label="@string/menu_home"
    tools:layout="@layout/fragment_home" />
  <fragment
    android:id="@+id/nav_insert"
    android:name="com.jasonstarling.agedatabase.InsertFragment"
    android:label="@string/insert"
    tools:layout="@layout/content_insert" />
  <fragment
    android:id="@+id/nav_delete"
    android:name="com.jasonstarling.agedatabase.DeleteFragment"
    android:label="@string/delete"
    tools:layout="@layout/content_delete" />
  <fragment
    android:id="@+id/nav_search"
    android:name="com.jasonstarling.agedatabase.SearchFragment"
    android:label="@string/search"
    tools:layout="@layout/content_search" />
  <fragment
    android:id="@+id/nav_results"
    android:name="com.jasonstarling.agedatabase.ResultsFragment"
    android:label="@string/results"
    tools:layout="@layout/content_results" />
</navigation>