<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".SearchFragment">

  <EditText
    android:id="@+id/editSearch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    android:text="@string/name" />

  <Button
    android:id="@+id/btnSearch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/search" />

  <TextView
    android:id="@+id/textResult"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/textview" />
</LinearLayout>